--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
             }
         }
     </style>
-</head>
+</head></head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
+     crossorigin="anonymous"></script>
 <body>
     <header>
         <div class="container">
@@ -165,8 +167,6 @@
 
     <div class="container main">
         <section class="card">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
-     crossorigin="anonymous"></script>
             <h2>Обо мне</h2>
             <p>Привет! Я Дамирка или же dqmjrkaaa. </p>
             <p>Dqmjrkaaa это мой ник. Вообще у меня 3 ника: dqmir1111, dqmjrkaaa, dqmjrka, </p>
@@ -187,8 +187,6 @@
         </section>
 
         <section class="card">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
-     crossorigin="anonymous"></script>
             <h2>Контакты</h2>
             <p>Если вы хотите со мной договориться о чем то, то можете написать мне!</p>
             <p>TG: @this_protected</a></p>
@@ -205,8 +203,6 @@
             </div>
         </section>
     </div>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
-     crossorigin="anonymous"></script>
     <footer>
         <div class="container">
             <p>&copy; 2025 dqmjrkaaa. Все права защищены.</p>
