--- a/index.html
+++ b/index.html
@@ -154,9 +154,7 @@
             }
         }
     </style>
-</head></head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
-     crossorigin="anonymous"></script>
+</head>
 <body>
     <header>
         <div class="container">
@@ -164,7 +162,8 @@
             <p>Веб-разработчик, дизайнер и любитель посидеть за компом)</p>
         </div>
     </header>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
+     crossorigin="anonymous"></script>
     <div class="container main">
         <section class="card">
             <h2>Обо мне</h2>
@@ -172,7 +171,8 @@
             <p>Dqmjrkaaa это мой ник. Вообще у меня 3 ника: dqmir1111, dqmjrkaaa, dqmjrka, </p>
             <p>В свободное время люблю играть в игры на ПК.</p>
         </section>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
+     crossorigin="anonymous"></script>
         <section class="card">
             <h2>У меня есть канал в:</h2>
             <ul class="skills-list">
@@ -185,7 +185,8 @@
                 <li>Аккаунт Playerok (редко)</li>
             </ul>
         </section>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
+     crossorigin="anonymous"></script>
         <section class="card">
             <h2>Контакты</h2>
             <p>Если вы хотите со мной договориться о чем то, то можете написать мне!</p>
@@ -205,7 +206,7 @@
     </div>
     <footer>
         <div class="container">
-            <p>&copy; 2025 dqmjrkaaa. Все права защищены.</p>
+            <p>&copy; 2025 dqmjrkaaa. Все права защищены. Upd: 21:05</p>
         </div>
     </footer>
 </body>
