--- a/index.html
+++ b/index.html
@@ -164,6 +164,18 @@
     </header>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
      crossorigin="anonymous"></script>
+<!-- Реклама -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9817378314409380"
+     data-ad-slot="2794491168"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
+     crossorigin="anonymous"></script>
     <div class="container main">
         <section class="card">
             <h2>Обо мне</h2>
@@ -173,6 +185,18 @@
         </section>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
      crossorigin="anonymous"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
+     crossorigin="anonymous"></script>
+<!-- Реклама -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9817378314409380"
+     data-ad-slot="2794491168"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         <section class="card">
             <h2>У меня есть канал в:</h2>
             <ul class="skills-list">
@@ -206,7 +230,7 @@
     </div>
     <footer>
         <div class="container">
-            <p>&copy; 2025 dqmjrkaaa. Все права защищены. Upd: 21:05</p>
+            <p>&copy; 2025 dqmjrkaaa. Все права защищены. Upd: 15:20</p>
         </div>
     </footer>
 </body>
