--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
     </header>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
      crossorigin="anonymous"></script>
+<!-- Reklama -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9817378314409380"
+     data-ad-slot="5324730827"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <!-- Реклама -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -185,15 +195,16 @@
         </section>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
      crossorigin="anonymous"></script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9817378314409380"
-     crossorigin="anonymous"></script>
-<!-- Реклама -->
+<!-- Reklama -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-9817378314409380"
-     data-ad-slot="2794491168"
+     data-ad-slot="5324730827"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -230,7 +241,7 @@
     </div>
     <footer>
         <div class="container">
-            <p>&copy; 2025 dqmjrkaaa. Все права защищены. Upd: 15:20</p>
+            <p>&copy; 2025 dqmjrkaaa. Все права защищены. Upd: 21:55</p>
         </div>
     </footer>
 </body>
