--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     <div class="container fade-in">
         
-        <img src="avatar.jpg" alt="Avatar" class="avatar" onerror="this.src='https://github.com'">
+        <img src="avatar.jpg" alt="Avatar" class="avatar" onerror="this.src='https://github.com/Dqmir111/bio/blob/main/avatar.jpg'">
 
         <h1>dqmjrkaaa</h1>
         
