--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Snowfall Effect</title>
     
     <style>
-        /* Сброс стилей */
+        /* Сброс стиле */
         * {
             margin: 0;
             padding: 0;
